# neurobits

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  404.html  CLAUDE.md  CNAME  LICENSE  README.md  config.toml  docker-compose.yml  index.html  index.md  index.xml  robots.txt  sitemap.xml
.github/workflows/: ci-cd.yml  ci.yml
2018/ocr-is-cool-google-ctf-2018/: index.html
2019/send-files-and-folders-with-netcat/: index.html
2020/ocr_is_cool/: index.html
about/: index.html
categories/: index.html  index.xml
categories/tips/: index.html  index.xml
categories/writeup/: index.html  index.xml
content/: about.md
content/posts/: ocr_is_cool.md
content/projects/: pullbin.md
css/: main.min.css
js/: disable.js
layouts/: index.html
posts/: index.html  index.xml
projects/: index.html  index.xml
projects/pullbin/: index.html
site/: .lycheeignore  hugo.toml
site/archetypes/: blog.md  default.md  notes.md  posts.md  projects.md
site/assets/css/: main.css
site/assets/js/: main.js  notes.js
site/content/blog/: 2026-04-building-neurobits.md  _index.md
site/content/notes/: 2026-04-automation-friction.md  2026-04-zig-comptime.md  _index.md
site/content/pages/: _index.md  about.md
site/layouts/: index.html  index.json  index.rss.xml
tags/: index.html  index.xml
tags/ctf/: index.html  index.xml
tags/netcat/: index.html  index.xml
tags/tarball/: index.html  index.xml
tools/: README.md  pyproject.toml
tools/src/neurobits/: __init__.py  cli.py  config.py
tools/tests/: test_cli.py  test_config.py
(+33 files in other folders)
