[project]
name = "neurobits"
version = "0.1.0"
description = "Thin wrapper around Hugo for Neurobits content authoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
neurobits = "neurobits.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurobits"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
